--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
    "name": "laxar-confirm-button-control",
-   "version": "1.0.0-pre",
+   "version": "1.0.0-alpha.0",
    "description": "A bootstrap-style button with an additional confirm step for destructive operations, as an AngularJS directive for LaxarJS widgets.",
    "authors": [],
    "license": "MIT",
@@ -13,6 +13,6 @@
       "bower_components"
    ],
    "dependencies": {
-      "laxar": "^1.0.0-alpha.12"
+      "laxar": "^1.0.0-alpha.14"
    }
 }
