--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
    "name": "laxar-confirm-button-control",
-   "version": "1.0.0-alpha.0",
+   "version": "1.0.0",
    "description": "A bootstrap-style button with an additional confirm step for destructive operations, as an AngularJS directive for LaxarJS widgets.",
    "authors": [],
    "license": "MIT",
